@@ -6,11 +6,11 @@ plugins {
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.4'
   id 'org.springframework.boot' version '2.7.18'
-  id 'org.owasp.dependencycheck' version '10.0.2'
+  id 'org.owasp.dependencycheck' version '10.0.4'
   id 'com.github.ben-manes.versions' version '0.42.0'
-  id 'org.sonarqube' version '3.2.0'
+  id 'org.sonarqube' version "5.1.0.4882"
   id 'info.solidsoft.pitest' version '1.15.0'
-  id 'io.freefair.lombok' version '6.5.1'
+  id 'io.freefair.lombok' version '8.10.2'
   // If Pact version is changed, make sure serenity report works.
   id 'au.com.dius.pact' version '4.3.12'
   id 'net.serenity-bdd.serenity-gradle-plugin' version '3.2.3'
@@ -22,7 +22,7 @@ version = '0.0.1'
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(17)
+    languageVersion = JavaLanguageVersion.of(21)
   }
 }
 
@@ -106,10 +106,12 @@ task functional(type: Test) {
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
   // finalizedBy aggregate
 }
 
 task integration(type: Test) {
+  jvmArgs = ['-Xms512m', '-Xmx2048m']
   description = "Runs integration tests"
   group = "Verification"
   testClassesDirs = sourceSets.integrationTest.output.classesDirs
@@ -156,7 +158,7 @@ jacocoTestReport {
   reports {
     xml.required = true
     csv.required = false
-    xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+    xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
   }
 }
 
@@ -192,7 +194,7 @@ sonarqube {
   properties {
     property "sonar.projectName", "Reform :: wa-task-management-api"
     property "sonar.projectKey", "uk.gov.hmcts.reform:wa-task-management-api"
-    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation}"
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/config/**," +
@@ -232,7 +234,7 @@ dependencyCheck {
 
 dependencyManagement {
   dependencies {
-    dependency group: 'commons-io', name: 'commons-io', version: '2.16.1'
+    dependency group: 'commons-io', name: 'commons-io', version: '2.17.0'
 
     dependencySet( group: 'org.springframework.security', version: '5.8.9'){
       entry 'spring-security-core'
@@ -282,18 +284,18 @@ repositories {
 }
 
 def versions = [
-  junit         : '5.10.2',
-  junitPlatform : '1.10.2',
-  reformLogging : '6.1.6',
+  junit         : '5.11.3',
+  junitPlatform : '1.11.3',
+  reformLogging : '6.1.7',
   springDoc     : '1.8.0',
   serenity      : '3.1.20',
   gradlePitest  : '1.15.0',
   pitest        : '1.16.1',
   sonarPitest   : '0.5',
   pactVersion   : '4.3.4',
-  logbook       : '2.6.2',
-  tomcat        : '9.0.95',
-  testcontainers: '1.19.8',
+  logbook       : '2.16.0',
+  tomcat        : '9.0.98',
+  testcontainers: '1.20.4',
   mapStruct     : '1.3.0.Final',
 ]
 
@@ -341,38 +343,39 @@ dependencies {
   implementation group: 'org.zalando', name: 'logbook-spring-boot-starter', version: versions.logbook
   implementation group: 'org.zalando', name: 'problem-spring-web-starter', version: '0.26.2'
 
-  implementation group: 'net.minidev', name: 'json-smart', version: '2.4.10'
+  implementation group: 'net.minidev', name: 'json-smart', version: '2.5.1'
 
-  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.2.1'
-  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.3.0'
+  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
   implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
+  implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
 
   implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.15.Final'
   implementation group: 'org.hibernate', name: 'hibernate-validator', version: '7.0.5.Final'
 
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.24.0'
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.24.0'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.24.2'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.24.2'
 
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: versions.tomcat
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: versions.tomcat
 
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.4'
-  implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.9.1'
+  implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.9.2'
 
   implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
 
-  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.15.3'
+  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.18.2'
 
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.5.13'
 
-  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.4'
 
   // required to convert postgres to hibernate types
   implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.21.1'
 
-  implementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
+  implementation group: 'org.awaitility', name: 'awaitility', version: '4.2.2'
 
   implementation 'com.microsoft.azure:applicationinsights-core:2.6.4'
 
@@ -381,7 +384,7 @@ dependencies {
 
   testImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
   testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: versions.testcontainers
-  testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+  testImplementation group: 'com.h2database', name: 'h2', version: '2.3.232'
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -406,7 +409,7 @@ dependencies {
   testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: versions.junit
 
   testImplementation group: 'com.obsidiandynamics.pojotester', name: 'core', version: '0.9.0'
-  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.5'
   testImplementation group: 'com.google.guava', name: 'guava-testlib', version: '32.1.3-jre'
 // https://mvnrepository.com/artifact/com.vladsch.flexmark/flexmark
   testCompileOnly group: 'com.vladsch.flexmark', name: 'flexmark-all', version: '0.64.8'
@@ -443,6 +446,7 @@ task runAndPublishConsumerPactTests(type: Test) {
   logger.lifecycle("Runs pact Tests")
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
 }
 
 runAndPublishConsumerPactTests.finalizedBy pactPublish
@@ -464,12 +468,14 @@ task contract(type: Test) {
   useJUnitPlatform()
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
 }
 
 task runProviderPactVerification(type: Test) {
   logger.lifecycle("Runs provider pact Tests")
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
   if (project.hasProperty('pact.verifier.publishResults')) {
     systemProperty 'pact.verifier.publishResults', project.property('pact.verifier.publishResults')
   }
